- the `...FoldApply` inline variants of `many`, `sepBy`, `sepEndBy` and `manyTill`
  have been consolidated in the `[^reference.Primitives.members.Inline FParsec.Primitives.Inline]` helper class
- sequence parsers now throw a `System.InvalidOperationException` instead of a `System.Exception` to prevent an infinite loop
- `pstring`, `notFollowedByString` and similar parsers now have optimized code paths
  for argument strings with only 1 char
- the behaviour of `manyChars` and `manyCharsTill` and their variants [^details-on-changes-to-manychars-manycharstill-and-their-variants has slightly changed]
- the skip variants of `manyChars` and `manyCharsTill` [^removed-skip-variants-of-manyChars have been removed]
-  Some renamings and function signature changes:
   [table#renamings
   [[Old] [New]]
   [[`[no-auto-link restOfLine]`] [`restOfLine true`]]
   [[`[no-auto-link skipRestOfLine]`] [`skipRestOfLine true`]]
   [[`skipToEndOfLine`] [`skipRestOfLine false`]]
   [[`skipToString[CI] str n`] [`skipCharsTillString[CI] str false n`]]
   [[`[no-auto-link charsTillString][CI] str n`] [`charsTillString[CI] str true n`]]
   [[`[no-auto-link skipCharsTillString][CI] str n`] [`skipCharsTillString[CI] str true n`]]
   [[`followedByChar chr`]
[``
if chr = '\r' || chr = '\n' then followedByNewline
else followedByString (string chr)
``]]

    [[`notFollowedByChar chr`]
[``
if chr = '\r' || chr = '\n' then notFollowedByNewline
else notFollowedByString (string chr)
``]]
    [[`currentCharSatisfies f`] [`nextCharSatisfies f`]]
    [[`[no-auto-link nextCharSatisfies] f`] [`next2CharsSatisfy (fun _ c1 -> f c1)`]]
   ]

-  `OperatorPrecedenceParser` has changed:
  - all types have been moved from the `[no-auto-link FParsec.OperatorPrecedenceParser]` module into the main `FParsec` namespace
  - the operator types `InfixOp`, `PrefixOp`, ... classes have been renamed to `InfixOperator`, `PrefixOperator`, ...
  - `Assoc` has been renamed to `Associativity`