@@ -411,7 +411,7 @@
         <div class="para _2">
          <p>
           This is an optimization for 32‐bit runtimes. You can find more information about the state tag in <a
-          href="users-guide/applying-parsers-in-sequence.html#the-statetag"></a>.
+          href="users-guide/applying-parsers-in-sequence.html#the-statetag">section 5.4.3</a> of the user’s guide.
          </p>
         </div>
        </dd>
